# CMakeTutorial

./: .gitignore  CMakeLists.txt  README.md  Tutorial.cpp
MathFunctions/: CMakeLists.txt  MakeTable.cpp  MathFunctions.cpp  MathFunctions.h  mysqrt.h
import-library/: CMakeLists.txt  main.cpp
import-library/animal/: CMakeLists.txt  Config.cmake.in  animal.cpp  animal.h
old-try/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
